// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="mocked-styled-0 bunojaf"
  style="--bunojaf-0: indianred;"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="mocked-styled-0 bunojaf"
  style="--bunojaf-0: grey;"
>
  foo
</button>
`;
